# Seds-Ground-Station-Frontend

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  Dioxus.toml  README.md  build.py  build.rs  index.html
.cargo/: config.toml
assets/: LocationShim.m
assets/themes/: presets.json
docs/: backend-api.md  backend-recent-streaming.md
docs/api-examples/: action-policy.json  auth-login.response.json  auth-session.anonymous.json  calibration-config.json  calibration-file.json  fill-targets.json  flight-setup.json  layout.full.json  layout.minimal.json  map-config.json  network-topology.json  recent-telemetry.json  websocket-messages.json
platform/android/: proguard-rules.pro
platform/android/kotlin/com/ubseds/gs26/: LocationShim.kt
platform/android/kotlin/dev/dioxus/main/: RustWebViewClient.kt
platform/macos/: Info.plist
scripts/: ios_package_sign.sh  theme_editor.py
src/: app.rs  app_connect_page.rs  app_connection.rs  app_shell.rs  auth.rs  debug_log.rs  main.rs  native_storage.rs
src/telemetry_dashboard/: actions_tab.rs  blink.rs  calibration_tab.rs  connection_status_tab.rs  dashboard_messages.rs  dashboard_storage.rs  data_chart.rs  data_tab.rs  detailed_tab.rs  errors_tab.rs  gps.rs  gps_android.rs  gps_apple.rs  gps_linux.rs  gps_webview.rs  gps_windows.rs  layout.rs  layout_settings_tab.rs  map_tab.rs  messages_tab.rs  mod.rs  network_metrics.rs  network_topology_tab.rs  notifications_tab.rs  persist.rs  prelude.rs  state_tab.rs  telemetry_runtime.rs  types.rs  version_page.rs  warnings_tab.rs
static/: ground_map.js
